[package]
name = "unitig_flipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jseqio = {git = "https://github.com/jnalanko/jseqio", rev = "826c6b591854801eea72d20ad21e1bbc958f5cdb"}
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"

