[package]
name = "unitig_flipper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reorienting unitigs to reduce the number of dummy nodes in an SBWT."
repository = "https://github.com/jnalanko/unitig_flipper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jseqio = "0.1.2"
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"

